lang/macro/tests/ui/fail/14-missing-storage-struct.stderr
error: no #[ink(storage)] struct found but expected exactly 1
 --> $DIR/14-missing-storage-struct.rs:3:1
  |
3 | #[ink::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
